# COSC-3P93-Project

./: .gitignore  ClionCPPGoodStyleConfig_v5.xml  README.md  WorldBVHTests.ods  buildCurrent.sh  commit.sh  runCurrent.sh  test.txt  test2.txt
Step 2/: CMakeLists.txt  cmake_make_command.sh
Step 2/Submission/: cmake_make_command.sh
Step 2/Submission/include/: raytracing.h  world.h
Step 2/Submission/include/util/: parser.h
Step 2/Submission/src/: globals.cpp
Step 2/Submission/src/util/: parser.cpp
Step 2/include/: globals.h  raytracing.h  types.h  world.h
Step 2/include/image/: image.h
Step 2/include/math/: bvh.h  colliders.h  vectors.h
Step 2/include/util/: models.h  parser.h  std.h
Step 2/src/: globals.cpp  main.cpp  raytracing.cpp  world.cpp
Step 2/src/image/: image.cpp
Step 2/src/math/: colliders.cpp
Step 2/src/util/: debug.cpp  models.cpp  parser.cpp
Step 3/: .~lock.Dev Log Week of 2022-10-23.odt#  CMakeLists.txt  Dev Log Week of 2022-10-23.odt  st3-rd-debug.cap  st3-rd-release.cap
Step 3/include/: config.h.in  types.h
Step 3/include/engine/: config.h.in  mpi.h  raytracing.h  types.h  world.h
Step 3/include/engine/image/: image.h
Step 3/include/engine/image/stb/: stb_image.h  stb_image_resize.h
Step 3/include/engine/math/: bvh.h  colliders.h  vectors.h
Step 3/include/engine/util/: debug.h  loaders.h  logging.h  memory_util.h  models.h  parser.h  std.h
Step 3/include/graphics/: debug_gui.h  graphics.h  input.h  keys.h  shader.h
Step 3/include/graphics/gl/: gl.h  shader.h
Step 3/include/graphics/gl/glad/: gl.h
Step 3/include/graphics/imgui/: imgui_impl_glfw.h  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_impl_x11.h
Step 3/include/math/: colliders.h  vectors.h
Step 3/include/opencl/: cl.h  open_ray_tracing.h
Step 3/include/util/: debug.h  logging.h  models.h
Step 3/resources/opencl/: arrays.cl  image.cl  randoms_git.cl  raytracer (conflicted copy 2022-12-09 001755).cl  raytracer.cl  sphereray.cl
Step 3/resources/shaders/: basic.fs  basic.vs  test.h  world.fs  world.vs
Step 3/src/: main.cpp
Step 3/src/engine/: globals.cpp  main.cpp  mpi.cpp  raytracing.cpp  world.cpp
Step 3/src/engine/image/: image.cpp
Step 3/src/engine/math/: bvh.cpp  colliders.cpp
Step 3/src/engine/util/: debug.cpp  loaders.cpp  models.cpp  parser.cpp
Step 3/src/graphics/: debug_gui.cpp  graphics.cpp  input.cpp  shader.cpp
Step 3/src/graphics/gl/: gl.c  gl.cpp  shader.cpp
Step 3/src/graphics/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_x11.cpp  imgui_tables.cpp  imgui_widgets.cpp
Step 3/src/math/: colliders.cpp
Step 3/src/opencl/: cl.cpp  open_ray_tracing.cpp
Step 3/src/util/: debug.cpp
